--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,3 @@
-
 <header class="bg-primary bg-gradient text-white py-5">
   <div class="container">
     <div class="row">
@@ -11,6 +10,12 @@
       </div>
       <div class="col-md-9">
         <h1></h1>
+
+        <!-- Two way data binding -->
+
+        <input [(ngModel)]="myName" placeholder="Enter your name" />
+        <h2>Hello, {{ myName }} I'm</h2>
+        <p>{{ message }}</p>
         <h1>Hanneka Rose C. Puri</h1>
         <h5>Web Developer</h5>
         <p class="border-top pt-3">
